force-app/main/default/objects/CheckItem__c/CheckItem__c.object-meta.xml
<CustomObject>
    <label>Check Item</label>
    <nameField>
        <displayFormat>CI-{00000}</displayFormat>
        <label>Check Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Check Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>