force-app/main/default/objects/CheckItem__c/fields/Automatic_Generation_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Generation_Ticket__c</fullName>
    <defaultValue>true</defaultValue>
    <description>自动生成ticket</description>
    <label>Automatic Generation Ticket</label>
    <type>Checkbox</type>
</CustomField>