force-app/main/default/objects/CheckItem__c/fields/BeingUsed__c.field-meta.xml
<CustomField>
    <fullName>BeingUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Being Used</label>
    <type>Checkbox</type>
</CustomField>