force-app/main/default/objects/CheckItem__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Check Items</relationshipLabel>
    <relationshipName>Check_Items</relationshipName>
    <type>Lookup</type>
</CustomField>