force-app/main/default/objects/CheckItem__c/fields/Channel_item__c.field-meta.xml
<CustomField>
    <fullName>Channel_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel item</label>
    <referenceTo>Channel_item__c</referenceTo>
    <relationshipLabel>Check Items</relationshipLabel>
    <relationshipName>Check_Items</relationshipName>
    <type>Lookup</type>
</CustomField>