force-app/main/default/objects/CheckItem__c/fields/Check_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Check_Item_Type__c</fullName>
    <defaultValue>&apos;巡店&apos;</defaultValue>
    <label>Check Item Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Check_Item_Type</valueSetName>
    </valueSet>
</CustomField>