force-app/main/default/objects/CheckItem__c/fields/Comment_Conditional_Type__c.field-meta.xml
<CustomField>
    <fullName>Comment_Conditional_Type__c</fullName>
    <label>Comment Conditional Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>