force-app/main/default/objects/CheckItem__c/fields/Conditional_Score_Has_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Score_Has_Ticket__c</fullName>
    <label>Conditional Score Has Ticket</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MaximumScore__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>