force-app/main/default/objects/CheckItem__c/fields/Conditional_Yes_No_Has_Comment__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Yes_No_Has_Comment__c</fullName>
    <label>Conditional Yes No Has Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>