force-app/main/default/objects/CheckItem__c/fields/Conditional_Yes_No_Has_File__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Yes_No_Has_File__c</fullName>
    <label>Conditional Yes No Has File</label>
    <length>255</length>
    <type>Text</type>
</CustomField>