force-app/main/default/objects/CheckItem__c/fields/Conditional_Yes_No_Has_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Yes_No_Has_Ticket__c</fullName>
    <label>Conditional Yes No Has Ticket</label>
    <length>255</length>
    <type>Text</type>
</CustomField>