force-app/main/default/objects/CheckItem__c/fields/Description_CN__c.field-meta.xml
<CustomField>
    <fullName>Description_CN__c</fullName>
    <label>Description CN</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>