force-app/main/default/objects/CheckItem__c/fields/Description_EN__c.field-meta.xml
<CustomField>
    <fullName>Description_EN__c</fullName>
    <label>Description EN</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>