force-app/main/default/objects/CheckItem__c/fields/Description_Filling_Language__c.field-meta.xml
<CustomField>
    <fullName>Description_Filling_Language__c</fullName>
    <label>Description Filling Language</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sales_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>zh_CN</fullName>
                <label>Chinese</label>
            </value>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Spanish</label>
            </value>
            <value>
                <fullName>in</fullName>
                <label>Indonesian</label>
            </value>
            <value>
                <fullName>Th</fullName>
                <label>Thailand</label>
            </value>
            <value>
                <fullName>vi</fullName>
                <label>Vietnamese</label>
            </value>
            <value>
                <fullName>JP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>