force-app/main/default/objects/CheckItem__c/fields/DescriptionT__c.field-meta.xml
<CustomField>
    <fullName>DescriptionT__c</fullName>
    <label>DescriptionT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>