force-app/main/default/objects/CheckItem__c/fields/Enter_Choice__c.field-meta.xml
<CustomField>
    <fullName>Enter_Choice__c</fullName>
    <label>Enter Choice</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>