force-app/main/default/objects/CheckItem__c/fields/Enter_Choice_CN__c.field-meta.xml
<CustomField>
    <fullName>Enter_Choice_CN__c</fullName>
    <label>Enter Choice CN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>