force-app/main/default/objects/CheckItem__c/fields/Enter_Choice_EN__c.field-meta.xml
<CustomField>
    <fullName>Enter_Choice_EN__c</fullName>
    <label>Enter Choice EN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>