force-app/main/default/objects/CheckItem__c/fields/File_Conditional_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Conditional_Type__c</fullName>
    <label>File Conditional Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>