force-app/main/default/objects/CheckItem__c/fields/Has_Image_AI__c.field-meta.xml
<CustomField>
    <fullName>Has_Image_AI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Image AI</label>
    <type>Checkbox</type>
</CustomField>