force-app/main/default/objects/CheckItem__c/fields/HasComment__c.field-meta.xml
<CustomField>
    <fullName>HasComment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Comment</label>
    <type>Checkbox</type>
</CustomField>