force-app/main/default/objects/CheckItem__c/fields/HasRelateQuestions__c.field-meta.xml
<CustomField>
    <fullName>HasRelateQuestions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasRelateQuestions</label>
    <type>Checkbox</type>
</CustomField>