force-app/main/default/objects/CheckItem__c/fields/HelpText__c.field-meta.xml
<CustomField>
    <fullName>HelpText__c</fullName>
    <label>Help Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>