force-app/main/default/objects/CheckItem__c/fields/HelpTextCN__c.field-meta.xml
<CustomField>
    <fullName>HelpTextCN__c</fullName>
    <label>Help Text CN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>