force-app/main/default/objects/CheckItem__c/fields/HelpTextEN__c.field-meta.xml
<CustomField>
    <fullName>HelpTextEN__c</fullName>
    <label>Help Text EN</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>