force-app/main/default/objects/CheckItem__c/fields/Image_AI__c.field-meta.xml
<CustomField>
    <fullName>Image_AI__c</fullName>
    <label>Image AI</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>空样检核</fullName>
            </value>
            <value>
                <fullName>品类检核</fullName>
            </value>
            <value>
                <fullName>电视黑屏检核</fullName>
            </value>
            <value>
                <fullName>门店logo检核</fullName>
            </value>
            <value>
                <fullName>打卡图像相似度检测</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>