force-app/main/default/objects/CheckItem__c/fields/Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type__c</fullName>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Locale Inspection</fullName>
                <default>true</default>
                <label>Locale Inspection</label>
            </value>
            <value>
                <fullName>Remote Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>