force-app/main/default/objects/CheckItem__c/fields/Integer_Type_Max__c.field-meta.xml
<CustomField>
    <fullName>Integer_Type_Max__c</fullName>
    <label>Max (Integer)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>