force-app/main/default/objects/CheckItem__c/fields/Is_Loop_Relate_Questions__c.field-meta.xml
<CustomField>
    <fullName>Is_Loop_Relate_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>子任务是否重复添加标记</description>
    <label>Is Loop Relate Questions</label>
    <type>Checkbox</type>
</CustomField>