force-app/main/default/objects/CheckItem__c/fields/Is_Related_To_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_Related_To_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Related To Product</label>
    <type>Checkbox</type>
</CustomField>