force-app/main/default/objects/CheckItem__c/fields/Is_Remote_Inspection__c.field-meta.xml
<CustomField>
    <fullName>Is_Remote_Inspection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Remote Inspection</label>
    <type>Checkbox</type>
</CustomField>