force-app/main/default/objects/CheckItem__c/fields/Is_Store_Rating__c.field-meta.xml
<CustomField>
    <fullName>Is_Store_Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Store Rating</label>
    <type>Checkbox</type>
</CustomField>