force-app/main/default/objects/CheckItem__c/fields/IsCountInScore__c.field-meta.xml
<CustomField>
    <fullName>IsCountInScore__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is CountIn Score</label>
    <type>Checkbox</type>
</CustomField>