force-app/main/default/objects/CheckItem__c/fields/IsYesOrNo__c.field-meta.xml
<CustomField>
    <fullName>IsYesOrNo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Yes Or No</label>
    <type>Checkbox</type>
</CustomField>