force-app/main/default/objects/CheckItem__c/fields/Number_Of_A_level_Stores__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_A_level_Stores__c</fullName>
    <label>Number Of A-level Stores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>