force-app/main/default/objects/CheckItem__c/fields/Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Api_Name__c</fullName>
    <label>Object Api Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product__c</fullName>
                <label>Product</label>
            </value>
            <value>
                <fullName>Brand__c</fullName>
                <label>Brand</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>