force-app/main/default/objects/CheckItem__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <label>Order Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>