force-app/main/default/objects/CheckItem__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Questions</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Sales_Region__c</field>
            <operation>equals</operation>
            <valueField>CheckItem__c.Sales_Region__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CheckItem__c</referenceTo>
    <relationshipLabel>Check Items</relationshipLabel>
    <relationshipName>Check_Items</relationshipName>
    <type>Lookup</type>
</CustomField>