force-app/main/default/objects/CheckItem__c/fields/Parent_Select__c.field-meta.xml
<CustomField>
    <fullName>Parent_Select__c</fullName>
    <description>子任务模块中，父任务选择</description>
    <label>Parent Select</label>
    <length>255</length>
    <type>Text</type>
</CustomField>