force-app/main/default/objects/CheckItem__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product__c.sales_region__c</field>
            <operation>equals</operation>
            <valueField>$User.Sales_Region__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Check Items (Product)</relationshipLabel>
    <relationshipName>Check_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>