force-app/main/default/objects/CheckItem__c/fields/Product_Line_Result__c.field-meta.xml
<CustomField>
    <fullName>Product_Line_Result__c</fullName>
    <label>Product Line Result</label>
    <length>50</length>
    <type>Text</type>
</CustomField>