force-app/main/default/objects/CheckItem__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personnel</fullName>
            </value>
            <value>
                <fullName>Booth and image</fullName>
            </value>
            <value>
                <fullName>Prototype</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>new</fullName>
                <isActive>false</isActive>
                <label>new</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>