force-app/main/default/objects/CheckItem__c/fields/ProjectT__c.field-meta.xml
<CustomField>
    <fullName>ProjectT__c</fullName>
    <label>ProjectT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>