force-app/main/default/objects/CheckItem__c/fields/RequireCommentOptions__c.field-meta.xml
<CustomField>
    <fullName>RequireCommentOptions__c</fullName>
    <label>Require Comment Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>