force-app/main/default/objects/CheckItem__c/fields/ResponsibleDepartment__c.field-meta.xml
<CustomField>
    <fullName>ResponsibleDepartment__c</fullName>
    <label>Responsible Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Department</valueSetName>
    </valueSet>
</CustomField>