force-app/main/default/objects/CheckItem__c/fields/Score_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Score_Symbol__c</fullName>
    <label>Score Symbol</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&gt;</fullName>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>=</fullName>
            </value>
            <value>
                <fullName>!=</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>