force-app/main/default/objects/CheckItem__c/fields/Score_Symbol_Response__c.field-meta.xml
<CustomField>
    <fullName>Score_Symbol_Response__c</fullName>
    <description>运算符号选择，可能同一个子任务在任务中存在多个</description>
    <label>Score Symbol Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>