force-app/main/default/objects/CheckItem__c/fields/Standard_Result__c.field-meta.xml
<CustomField>
    <fullName>Standard_Result__c</fullName>
    <label>Standard Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>