force-app/main/default/objects/CheckItem__c/fields/Ticket_Conditional_Type__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Conditional_Type__c</fullName>
    <label>Ticket Conditional Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>