force-app/main/default/objects/CheckItem__c/recordTypes/Australia.recordType-meta.xml
<RecordType>
    <fullName>Australia</fullName>
    <active>true</active>
    <label>Australia</label>
</RecordType>