force-app/main/default/objects/CheckItem__c/recordTypes/Colombia.recordType-meta.xml
<RecordType>
    <fullName>Colombia</fullName>
    <active>true</active>
    <label>Colombia</label>
</RecordType>