force-app/main/default/objects/CheckItem__c/recordTypes/Japan.recordType-meta.xml
<RecordType>
    <fullName>Japan</fullName>
    <active>true</active>
    <label>Japan</label>
</RecordType>