force-app/main/default/objects/CheckItem__c/recordTypes/Mexico.recordType-meta.xml
<RecordType>
    <fullName>Mexico</fullName>
    <active>true</active>
    <label>Mexico</label>
</RecordType>