force-app/main/default/objects/CheckItem__c/recordTypes/Peru.recordType-meta.xml
<RecordType>
    <fullName>Peru</fullName>
    <active>true</active>
    <label>Peru</label>
</RecordType>