force-app/main/default/objects/CheckItem__c/recordTypes/South_Africa.recordType-meta.xml
<RecordType>
    <fullName>South_Africa</fullName>
    <active>true</active>
    <label>South Africa</label>
</RecordType>