force-app/main/default/objects/CheckItem__c/validationRules/Description_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Description_Rule</fullName>
    <active>true</active>
    <description>校验是否填写Description字段</description>
    <errorConditionFormula>Description__c = &apos;&apos;</errorConditionFormula>
    <errorMessage>Missing required fields Description!</errorMessage>
</ValidationRule>