force-app/main/default/objects/CheckItem__c/validationRules/UpdateBeingUsed.validationRule-meta.xml
<ValidationRule>
    <fullName>UpdateBeingUsed</fullName>
    <active>false</active>
    <description>Records that have already been assigned cannot be modified！</description>
    <errorConditionFormula>PRIORVALUE(BeingUsed__c) &amp;&amp; Active__c</errorConditionFormula>
    <errorDisplayField>Active__c</errorDisplayField>
    <errorMessage>Records that have already been assigned cannot be modified！</errorMessage>
</ValidationRule>