force-app/main/default/objects/CheckItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sales_Region__c</columns>
    <columns>NAME</columns>
    <columns>Product_Line__c</columns>
    <columns>Item_Type__c</columns>
    <columns>Check_Item_Type__c</columns>
    <columns>OrderNumber__c</columns>
    <columns>Description__c</columns>
    <columns>Parent_Select__c</columns>
    <columns>HelpText__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Question_Type__c</field>
        <operation>equals</operation>
        <value>Text</value>
    </filters>
    <label>All</label>
</ListView>