force-app/main/default/objects/CheckItem__c/listViews/Australia.listView-meta.xml
<ListView>
    <fullName>Australia</fullName>
    <columns>Sales_Region__c</columns>
    <columns>NAME</columns>
    <columns>Item_Type__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Description__c</columns>
    <columns>OrderNumber__c</columns>
    <columns>Product_Line__c</columns>
    <columns>HasFile__c</columns>
    <columns>HasRelateQuestions__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HasRelateQuestions__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Australia</label>
    <sharedTo>
        <roleAndSubordinatesInternal>AU_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>