force-app/main/default/objects/CheckItem__c/listViews/Canada.listView-meta.xml
<ListView>
    <fullName>Canada</fullName>
    <columns>Sales_Region__c</columns>
    <columns>NAME</columns>
    <columns>Item_Type__c</columns>
    <columns>Question_Type__c</columns>
    <columns>Description__c</columns>
    <columns>OrderNumber__c</columns>
    <columns>Channel_item__c</columns>
    <columns>Product_Line__c</columns>
    <columns>Enter_Choice__c</columns>
    <columns>Active__c</columns>
    <columns>HasFile__c</columns>
    <columns>HasComment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Region__c</field>
        <operation>equals</operation>
        <value>Hisense Canada</value>
    </filters>
    <label>Canada</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Canada_GM</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>